# girgen

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  scripts.nu
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/generator/: cache.rs  mod.rs
src/generator/debug/: mod.rs
src/generator/gjs/: overrides.rs
src/generator/gjs/element/: callable.rs  callback.rs  class.rs  constant.rs  gtype.rs  record.rs
src/generator/gjs/templates/: aliases.jinja  repository.jinja
src/generator/typescript/: generate.rs  mod.rs  overrides.rs  render.rs
src/generator/typescript/element/: alias.rs  callable.rs  callback.rs  class.rs  constant.rs  doc.rs  enumeration.rs  function.rs  gtype.rs  record.rs
src/generator/typescript/gjs_lib/: gettext.d.ts  gjs.d.ts
src/generator/typescript/overrides/: GLib-2.0.d.ts  GObject-2.0.d.ts  Gio-2.0.d.ts  Gtk.d.ts
src/generator/typescript/templates/: class.jinja  enumeration.jinja  index.jinja  interface.jinja  introspection.jinja  record.jinja  repository.jinja
src/parser/: element.rs  error.rs  mod.rs  parse_gir.rs
src/parser/element/: alias.rs  annotation.rs  bitfield.rs  boxed.rs  callable.rs  callback.rs  cinclude.rs  class.rs  constant.rs  constructor.rs  doc.rs  doc_elements.rs  enum.rs  field.rs  function.rs  info.rs  interface.rs  member.rs  method.rs  namespace.rs  package.rs  property.rs  record.rs  repository.rs  signal.rs  type.rs  union.rs
