[package]
name = "girgen"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "GIR Parser and type generator"
repository = "https://github.com/aylur/girgen"
exclude = [
    "/flake.nix",
    "/flake.lock",
    "/package.json",
    "/package-lock.json",
    "/bin",
    "/scripts.nu",
]

[dependencies]
quick-xml = "0"
rayon = "1"
minijinja = { version = "2", features = ["builtins"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
stringcase = "0"
twox-hash = "2"
clap = { version = "4", features = ["derive"] }
colored = "3"
